tests/golden/compile-pass/struct_method_self.rua
struct Point {
    x: i64,
    y: i64,
}

impl Point {
    fn sum(&self) -> i64 {
        self.x + self.y
    }
}

fn read(point: Point) -> i64 {
    point.sum()
}
