tests/golden/compile-fail/call_wrong_arity_method.rua
struct Counter { value: i64 }

impl Counter {
    fn get(&self) -> i64 { self.value }
}

fn read(counter: Counter) -> i64 {
    counter.get(1)
}
